test/errors/scan_string_escape.py
"\U12345678"
"\U00110000"
